# markdown-editor

./: SPEC.md  index.html  package.json  pnpm-lock.yaml  test.md
docs/: _config.yml  index.html
src/: editor.ts  export.ts  focus-mode.ts  main.ts  menu.ts  muted-markdown.ts  preview.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
