[package]
name = "krill-markdown-editor"
version = "0.1.1"
description = "A beautiful markdown editor for Linux"
authors = ["Filip"]
edition = "2021"
rust-version = "1.77"
license = "MIT"

[lib]
name = "krill_markdown_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-cli = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
